# guillemot

./: .gitignore  CMakeLists.txt  README.md
src/: bitboard.cpp  bitboard.h  comedy.cpp  comedy.h  eval_params.h  eval_params_tuned.h  eval_psqt_tuned.h  eval_tables.cpp  eval_tables.h  evaluator.cpp  evaluator.h  hce_evaluator.cpp  hce_evaluator.h  main.cpp  move.h  movegen.cpp  movegen.h  movepicker.cpp  movepicker.h  pawn_hash.cpp  pawn_hash.h  perft.cpp  perft.h  position.cpp  position.h  process_hack.cpp  process_hack.h  search.cpp  search.h  see.cpp  see.h  types.h  zobrist.cpp  zobrist.h
